<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScheduleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <Button
                    android:id="@+id/btAll774inc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/all_774inc" />

                <Button
                    android:id="@+id/btAniMare"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="11sp"
                    android:layout_height="wrap_content"
                    android:text="@string/aniMare" />

                <Button
                    android:id="@+id/btHoneyStrap"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:text="@string/honeyStrap_ry" />
                <Button
                    android:id="@+id/btSugarLyric"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/sugarLyric_ry" />
                <Button
                    android:id="@+id/btVApArt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:text="@string/vtuberApArt" />
            </TableRow>
        </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:background="@drawable/border_black"
        android:padding="1dp"/>

    </LinearLayout>
</FrameLayout>