<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvScheduleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/schedule_time" />

        <TextView
            android:id="@+id/tvDistributor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/distributor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">

        <ImageView
            android:id="@+id/ivImg"
            android:layout_width="160dp"
            android:layout_height="90dp"
            tools:background="@drawable/hqdefault_live" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBroadcastStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broadcast_status" />

            <TextView
                android:id="@+id/tvBroadcastTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broadcast_title" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>